--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
 
     <link rel="stylesheet" href="static/css/styles.css">
-    
+
     <script src="http://d3js.org/d3.v3.min.js"></script>
     <script type="text/javascript" src="static\js\gui.js"></script>
     <script type="text/javascript" src="static\js\frame_feed.js"></script>
@@ -13,19 +13,23 @@
 
 <body onmousemove="showOptionsMenu()">
 
-    <div id="optionsmenu" class="sidenav" onmouseover="mouseIsOnOptionsMenu = true"
-        onmouseout="mouseIsOnOptionsMenu = false">
+    <div id="optionsmenu" class="sidenav" onmouseover="setMouseIsInOptionsMenu(true)"
+        onmouseout="setMouseIsInOptionsMenu(false)">
         <label>X FOV Bound</label> <input type="text" id="x_fov_bound" value="1"> <br>
         <label>Y FOV Bound</label> <input type="text" id="y_fov_bound" value="1"> <br>
         <label>Swap Eyes</label> <input type="checkbox" id=doSwapEyes onclick="swapEyeDebugLabels()"> <br>
         <label>Toggle Debug</label> <input type="checkbox" onclick="toggleDebug(this.checked)"> <br>
         <div style="display:none" id="debug">
             <br>
-            <label id="toplabel">Left Eye</label>
-            <canvas id="frame-canvas0"></canvas> <br>
+            <div id="debug-top">
+                <label id="toplabel">Left Camera</label>
+                <canvas id="frame-canvas0"></canvas> <br>
+            </div>
             <br>
-            <label id="bottomlabel">Right Eye</label>
-            <canvas id="frame-canvas1"></canvas> <br>
+            <div id="debug-bottom">
+                <label id="bottomlabel">Right Camera</label>
+                <canvas id="frame-canvas1"></canvas> <br>
+            </div>
         </div>
     </div>
 
