--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
     <script src="http://d3js.org/d3.v3.min.js"></script>
     <script type="text/javascript" src="static\js\gui.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.0.0/dist/tf.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/coco-ssd"></script>
     <script type="text/javascript" src="static\js\frame_feed.js"></script>
 </head>
 
