--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 <head lang="en">
     <meta charset="utf-8">
 
+    <!-- Style --> 
     <link rel="stylesheet" href="static/css/styles.css">
 
+    <!-- Scripts -->
     <script src="http://d3js.org/d3.v3.min.js"></script>
     <script type="text/javascript" src="static\js\gui.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.0.0/dist/tf.min.js"></script>
@@ -15,6 +17,7 @@
 
 <body onmousemove="showOptionsMenu()">
 
+    <!-- Config Menu -->
     <div id="optionsmenu" class="sidenav" onmouseover="setMouseIsInOptionsMenu(true)"
         onmouseout="setMouseIsInOptionsMenu(false)">
         <label>X FOV Bound</label> <input type="text" id="x_fov_bound" value="1"> <br>
@@ -34,13 +37,6 @@
             </div>
         </div>
     </div>
-
-    <video autoplay class="hidden"></video>
-
-
-    <script>
-    </script>
-
 </body>
 
 </html>
