changed fov bound tuning variables to sensitivity factor, as this is far more intuitive.

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
         onmouseover="setMouseIsInOptionsMenu(true)"
         onmouseout="setMouseIsInOptionsMenu(false)"
     >
-        <label>X Sensitivity %</label>
+        <label>X Sensitivity Factor</label>
         <input 
             type="text"
             id="optionsMenu_xSensitivity"
@@ -33,7 +33,7 @@
         >
         <br>
 
-        <label>Y Sensitivity %</label>
+        <label>Y Sensitivity Factor</label>
         <input
             type="text"
             id="optionsMenu_ySensitivity"
