Enhancement/17 write unit tests (#28)
- Refactored to improve testability
- Wrote unit tests for getNormalisedCentrePointOf, getPupilDisplacement, and getTrackingTarget
- Fixed fault in getPupilDisplacement
- Changed FOV bound tuning variables to sensitivity, as this is more intuitive.

--- a/src/index.html
+++ b/src/index.html
@@ -25,18 +25,19 @@
         onmouseover="setMouseIsInOptionsMenu(true)"
         onmouseout="setMouseIsInOptionsMenu(false)"
     >
-        <label>X FOV Bound</label>
+        <label>X Sensitivity Factor</label>
         <input 
             type="text"
-            id="optionsMenu_xFovBound" value="1"
+            id="optionsMenu_xSensitivity"
+            value=""
         >
         <br>
 
-        <label>Y FOV Bound</label>
+        <label>Y Sensitivity Factor</label>
         <input
             type="text"
-            id="optionsMenu_yFovBound"
-            value="1"
+            id="optionsMenu_ySensitivity"
+            value=""
         >
         <br>
 
