the Swap Eyes button is now only shown when there are two webcams plugged in

--- a/src/index.html
+++ b/src/index.html
@@ -41,13 +41,16 @@
         >
         <br>
 
-        <label>Swap Eyes</label>
-        <input
-            type="checkbox"
-            id=optionsMenu_doSwapEyes
-            onclick="swapEyeDebugLabels()"
-        >
-        <br>
+        <div id="options_menu_swapEyesDiv">
+            <label>Swap Eyes</label>
+            <input
+                type="checkbox"
+                id=optionsMenu_doSwapEyes
+                onclick="swapEyeDebugLabels()"
+            >
+            <br>
+        </div>
+        
 
         <label>Toggle Debug</label>
         <input
