fixed mixed-up webcam labels (#34)

--- a/src/index.html
+++ b/src/index.html
@@ -61,13 +61,13 @@
         <div style="display:none" id="optionsMenu_debug">
             <br>
             <div id="optionsMenu_debugTop">
-                <label id="optionsMenu_topLabel">Left Camera</label>
+                <label id="optionsMenu_topLabel">Right Webcam</label>
                 <canvas id="optionsMenu_frameCanvas0"></canvas> <br>
             </div>
             <br>
 
             <div id="optionsMenu_debugBottom">
-                <label id="optionsMenu_bottomLabel">Right Camera</label>
+                <label id="optionsMenu_bottomLabel">Left Webcam</label>
                 <canvas id="optionsMenu_frameCanvas1"></canvas> <br>
             </div>
         </div>
